added more content on work subpages

--- a/araw.html
+++ b/araw.html
@@ -40,10 +40,8 @@
     <main>
 
         <section class="project-hero">
-            <div class="container wide">
-                <div class="image-wrapper-fullwidth-cover">
-                    <img src="img/webp/combined-sunscreen.webp" alt="placeholder" width="1600" height="800" />
-                </div>
+            <div class="hero-image-wrapper">
+                <img src="img/webp/combined-sunscreen-expand (1).jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800" />
             </div>
         </section>
 
@@ -71,87 +69,117 @@
                     </div>
                 </div>
             </div>
-            <section class="araw-container">
+
+            <section>
+
                 <div class="project-grid">
-                    <div class="project-card full-width">
+                    <div class="project-card">
                         <img src="img/gif/araw-wide-logo-1.20.gif" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
+                </div>
+
+                <div class="project-grid three-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid two-column">
                     <div class="project-card">
                         <img src="img/png/araw-brand-assets-59.png" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card ">
                         <img src="img/png/araw-brand-assets-60.png" alt="Project 3" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <div class="project-card full-width">
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
                         <img src="img/png/araw-typeface-assets.png" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <div class="project-card full-width">
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/araw-colors.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="project-grid ">
+                    <div class="project-card">
                         <img src="img/gif/araw-package.gif" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                 </div>
-            </section>
-            <section>
-                <div class="container">
-                    <!-- need to fix mobile -->
 
-                    <p class="center">Supporting Emblems</p>
-                    <div class="assets">
-                        <img src="img/svg/araw-supporting-assets-41.svg" alt="" width="300" height="300">
-                        <img src="img/svg/araw-supporting-assets-42.svg" alt="" width="300" height="300">
-                        <img src="img/svg/araw-supporting-assets-43.svg" alt="" width="300" height="300">
-                        <img src="img/svg/araw-supporting-assets-44.svg" alt="" width="300" height="300">
-                        <img src="img/svg/araw-supporting-assets-45.svg" alt="" width="300" height="300">
-                        <img src="img/svg/araw-supporting-assets-46.svg" alt="" width="300" height="300">
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="img/png/IMG_3108 (1).PNG" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card ">
+                        <img src="img/jpg/packaged-printed (1).jpg" alt="Project 3" class="project-image">
+                        <div class="project-overlay">
+                        </div>
                     </div>
                 </div>
 
-
-                <section class="araw-container">
-                    <div class="project-grid">
-                        <!-- <div class="project-card">
-                        <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
-                        </div>
-                    </div> -->
-                        <div class="project-card full-width">
-                            <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
-                            <div class="project-overlay">
 
-                            </div>
                         </div>
-                        <div class="project-card">
-                            <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
-                            <div class="project-overlay">
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
-                            <div class="project-overlay">
-                            </div>
-                        </div>
-                        <!-- <div class="project-card full-width">
-                        <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div> -->
                     </div>
-                </section>
+                </div>
+
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
         </div>
 
-        <div class="one-half">
-            <h3 class="view-other-projects">View my other Projects</h3>
-            <a class="icon-hover" href="cinqueterre.html">Previous</a>
-            <a class="icon-hover" href="charlesandrayeames.html">Next</a>
+        <div class="view-other-projects">
+            <h3>View my other Projects</h3>
+            <a class="icon-hover" class="previous-project" href="cinqueterre.html">Previous</a>
+            <a class="icon-hover" class="next-project" href="cinqueterre.html">View all Projects</a>
+            <a class="icon-hover" class="next-project" href="charlesandrayeames.html">Next</a>
 
         </div>
 
