--- a/boozi.html
+++ b/boozi.html
@@ -40,10 +40,11 @@
 
     <main>
         <section class="project-hero">
-            <div class="image-wrapper-fullwidth-cover">
-                <img src="img/webp/cinque-terre-hero.webp" alt="placeholder" width="1920" height="1080" />
+            <div class="hero-image-wrapper">
+                <img src="img/jpg/boozi-cans-4.jpg" alt="3 cans of Boozi Hard Seltzer" width="" height="" />
             </div>
         </section>
+
 
         <div class="container wide">
             <div class="row intro">
@@ -51,7 +52,7 @@
                     <ul class="project-meta-list">
                         <li><strong class="caps">Client:</strong> Student Project</li>
                         <li><strong class="caps">Project Type:</strong> Graphic Typography</li>
-                        <li><strong class="caps">Software:</strong> Adobe Illustrator</li>
+                        <li><strong class="caps">Software:</strong> Adobe Illustrator & Photoshop</li>
                     </ul>
                 </div>
 
@@ -71,54 +72,94 @@
 
         </section>
 
+        <section>
 
-
-
-        <section class="boozi-container">
             <div class="project-grid">
-                <div class="project-card full-width">
-                    <img src="img/gif/boozi-fruit.gif" alt="Project 1" class="project-image">
+                <div class="project-card">
+                    <img src="img/gif/boozi-fruits-2.gif" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
+            </div>
+
+            <div class="project-grid three-column">
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-grid two-column">
                 <div class="project-card">
                     <img src="img/png/boozi-type.png" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/png/boozi-logo-2.png" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card full-width">
-                    <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
+                    <img src="img/png/boozi-B-65.png" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="boozi-container">
+
             <div class="project-grid">
-                <div class="project-card full-width">
-                    <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
+                <div class="project-card">
+                    <img src="img/webp/can-pool-6.webp" alt="Project 4" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-grid two-column">
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/webp/postcard.webp" alt="Project 3" class="project-image">
+                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-grid three-column">
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/webp/postcard.webp" alt="Project 3" class="project-image">
+                    <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- <section class="other-projects">View Other Projects</section> -->
+        <div>
+            <!-- <h3 class="view-other-projects">View my other Projects</h3> -->
+            <a class="icon-hover" href="#">Previous</a>
+            <a class="icon-hover" href="#">View all Projects</a>
+            <a class="icon-hover" href="#">Next</a>
+
+        </div>
 
     </main>
 
