--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -40,7 +40,7 @@
     <main>
 
         <section class="project-hero">
-            <div class="image-wrapper-fullwidth-cover">
+            <div class="hero-image-wrapper align-bottom">
                 <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
@@ -67,37 +67,52 @@
             </section>
 
 
-            <section class="eames-container">
+            <section>
+
                 <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/eames1.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/png/eames2.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/png/eames3.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+
                 </div>
 
-                <div class="project-card full-width img-spacer">
-                    <img src="img/webp/eames1.webp" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="img/jpg/orange-chairs-editorial 2.jpg" alt="Project 7" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/jpg/greenchairs-editorial 2.jpg" alt="Project 8" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/jpg/brown-chairs-editorial.jpg" alt="Project 9" class="project-image">
+                        <div class="project-overlay">
+                        </div>
                     </div>
                 </div>
-                <div class="project-card full-width img-spacer">
-                    <img src="img/webp/eames2.webp" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
+            </section>
 
-                    </div>
-                </div>
-                <div class="project-card full-width img-spacer">
-                    <img src="img/webp/eames3.webp" alt="Project 4" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
+            <div class="one-half">
+                <h3 class="view-other-projects">View my other Projects</h3>
+                <a class="icon-hover" href="araw.html">Previous</a>
+                <a class="icon-hover" href="charlesandrayeames.html">Next</a>
 
-        </div>
-        </section>
-
-        <div class="one-half">
-            <h3 class="view-other-projects">View my other Projects</h3>
-            <a class="icon-hover" href="araw.html">Previous</a>
-            <a class="icon-hover" href="charlesandrayeames.html">Next</a>
-
-        </div>
+            </div>
     </main>
 
 
