--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -40,8 +40,8 @@
 
     <main>
         <section class="project-hero">
-            <div class="image-wrapper-fullwidth-cover">
-                <img src="img/png/cinqueterre-logo-wide.png" alt="placeholder" width="1920" height="1080" />
+            <div class="hero-image-wrapper">
+                <img src="img/png/cinque-terre-bg-wide.png" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -58,8 +58,10 @@
                 <div class="three-fourths">
                     <div class="container-content">
                         <h3>Cinque Terre</h3>
+                        <!-- <h5><em>A Destination Emblem</em></h5> -->
 
-                        <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
+
+                        <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre&apos;s charm.</p>
                     </div>
                 </div>
             </div>
@@ -70,30 +72,35 @@
 
 
 
-        <section class="cinqueterre-container">
+        <section>
             <div class="project-grid">
-                <div class="project-card full-width">
+                <div class="project-card">
+                    <img src="img/gif/cinque-terre-logo-wide.gif" alt="Project 1" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-grid">
+                <div class="project-card">
                     <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
+            </div>
+
+            <div class="project-grid two-column">
                 <div class="project-card">
                     <img src="img/webp/mug.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/webp/postcard.webp" alt="Project 3" class="project-image">
+                    <img src="img/webp/sign-cq.webp" alt="Project 3" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
-                <!-- <div class="project-card full-width">
-                    <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div> -->
 
-            </div>
             </div>
         </section>
 
