--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
+                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
             </a>
+            <h1 class="hide-visually">angelica palilio</h1>
+
         </div>
+
         <nav class="site-nav">
             <ul>
 
@@ -59,53 +62,49 @@
 
         </section>
 
-        <section class="works" id="projects">
-            <!-- <h2 class="works-heading">Projects</h2> -->
-            <div class="works-full">
-                <a href="araw.html">
-                    <img src="img/webp/combined-sunscreen.webp" alt="tba" width="1920" height="1800">
-                </a>
-                <p>Araw</p>
-            </div>
-            <div class="works-grid">
+        <section>
 
-                <div class="works-project">
+            <div class="works-grid">
+                <div class="works-card">
+                    <a href="araw.html">
+                        <img src="img/webp/combined-sunscreen.webp" alt="Araw Project 1 image of combined sunscreen" width="1920" height="1800" class="works-image">
+                    </a>
+                </div>
+            </div>
+
+            <div class="works-grid two-column">
+                <div class="works-card">
                     <a href="cinqueterre.html">
-                        <img class="ocard-image" src="img/png/cinqueterre-logo-w-bg.png" alt="Cinque Terre Logo" width="1920" height="1800">
+                        <img class="ocard-image" src="img/png/cinqueterre-w-bg-thumbs.png" alt="Cinque Terre Logo" width="1920" height="1800" class="works-image">
                     </a>
-                    <p>Cinque Terre</p>
+                </div>
+                <div class="works-card">
+                    <a href="boozi.html">
+                        <img src="img/png/boozi-thumbs.png" alt="boozi-can" width="1920" height="1800" class="works-image">
+                    </a>
                 </div>
 
-                <div class="works-project light">
-                    <a href="charlesandrayeames.html">
-                        <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800">
-                    </a>
-                    <p>Charles and Ray Eames Editorial</p>
-                </div>
-            </div>
-
-            <div class="works-full">
-                <a href="#">
-                    <img src="img/png/eames-chair.png" alt="Image 4">
-                </a>
-                <p>Resting Mug</p>
             </div>
 
             <div class="works-grid">
-                <div class="works-project">
+                <div class="works-card">
                     <a href="#">
-                        <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800">
+                        <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
                     </a>
-                    <p>Krishna Cow Sanctuary</p>
+                </div>
+            </div>
+
+            <div class="works-grid two-column light">
+                <div class="works-card">
+                    <a href="#">
+                        <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800" class="works-image">
+                    </a>
                 </div>
 
-
-
-                <div class="works-project">
-                    <a href="boozi.html">
-                        <img src="img/png/boozi-w-bg.png" alt="boozi-can" width="1920" height="1800">
+                <div class="works-card">
+                    <a href="charlesandrayeames.html">
+                        <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800" class="works-image">
                     </a>
-                    <p>Boozi Hard Seltzer</p>
                 </div>
             </div>
 
@@ -115,8 +114,7 @@
 
     <footer class="site-footer">
 
-
-        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
+        <div class="eyebrow"> <strong>angelica palilio</strong></div>
 
         <div class="row">
             <div class="one-third column">
@@ -156,7 +154,7 @@
             </div>
 
         </div>
-
+        <img src="img/png/flower-business.png" alt="" width="100" height="100">
         <div class="legal">
 
             <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
