added hover effect on next page/prev page

--- a/boozi.html
+++ b/boozi.html
@@ -24,9 +24,11 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
+                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
             </a>
+            <h1 class="hide-visually">angelica palilio</h1>
         </div>
+
         <nav class="site-nav">
             <ul>
 
