--- a/araw.html
+++ b/araw.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
     <!-- MAIN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
+
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -24,9 +26,11 @@
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-emblem-40.png" alt="Angelica Portfolio Logo" width="90" height="90">
+                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
             </a>
+            <h1 class="hide-visually">angelica palilio</h1>
         </div>
+
         <nav class="site-nav">
             <ul>
 
@@ -175,11 +179,20 @@
 
         </div>
 
+
+        <!-- <h3>View my other Projects</h3> -->
+
         <div class="view-other-projects">
-            <h3>View my other Projects</h3>
-            <a class="icon-hover" class="previous-project" href="cinqueterre.html">Previous</a>
-            <a class="icon-hover" class="next-project" href="cinqueterre.html">View all Projects</a>
-            <a class="icon-hover" class="next-project" href="charlesandrayeames.html">Next</a>
+
+            <ul class="_line hover-effect">
+                <li><a href="">Previous</a></li>
+                <li><a href="">View all Projects</a></li>
+                <li><a href="">Next</a></li>
+            </ul>
+
+            <!-- <a href="cinqueterre.html">Previous</a>
+            <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
+            <a href="charlesandrayeames.html">Next</a> -->
 
         </div>
 
@@ -207,6 +220,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="one-third column">
                 <ul class="footer-pagenav">
 
